--- a/src/Scss/_item.scss
+++ b/src/Scss/_item.scss
@@ -14,6 +14,7 @@
     .text-item{
         margin: 3px 0;
         text-transform: capitalize;
+        max-width: 90%;
         @include textbox-styling;
     }
     .btn-delete {
